force-app/main/default/objects/Opportunity/fields/sugati__O_Live_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Live_Margin__c</fullName>
    <formula>IF(TEXT(StageName) == &apos;Tour&apos;, 
    sugati__S_O_Actual_Tour_Margin_Percent__c,
    IF(Amount == 0,
        0,
        IF(ISBLANK(sugati__S_O_Total_Net_Cost_in_Selling_Currency__c), 
            IF(sugati__O_Include_Flight_Margin__c,
                (sugati__MV_W_Comm__c / IF($Setup.sugati__Financial_Charges__c.sugati__Using_Only_Margin_Object__c, Amount - sugati__MV_W_Comm__c, Amount)),
                (sugati__MV_W_Comm__c / (IF($Setup.sugati__Financial_Charges__c.sugati__Using_Only_Margin_Object__c, Amount - sugati__MV_W_Comm__c, Amount) - sugati__O_Total_Flight_Cost__c))
            ),
            sugati__S_O_Margin_After_Agency_Commission__c
        )
    )
)</formula>
    <label>Booking Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>