force-app/main/default/objects/Opportunity/fields/sugati__O_Live_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Live_Occupancy__c</fullName>
    <label>Live Occupancy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>