force-app/main/default/objects/Opportunity/fields/sugati__O_Live_Room_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Live_Room_Capacity__c</fullName>
    <label>Live Room Capacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>