force-app/main/default/objects/Opportunity/fields/sugati__O_Map_Theme__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Map_Theme__c</fullName>
    <label>Map Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Roadmap</fullName>
            </value>
            <value>
                <fullName>Satellite</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Terrain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>