force-app/main/default/objects/Opportunity/fields/sugati__O_Map_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Map_Type__c</fullName>
    <label>Map Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
                <default>true</default>
                <label>Multiple</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>