force-app/main/default/objects/Opportunity/fields/sugati__O_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Margin__c</fullName>
    <label>Margin Value Before Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>