force-app/main/default/objects/Opportunity/fields/sugati__O_Margin_Value_With_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Margin_Value_With_Commission__c</fullName>
    <formula>sugati__O_Margin__c -(sugati__O_Agent_Commission__c+if(ISBLANK(TEXT(sugati__O_Sales_Commission_Type__c)),0,sugati__O_Finders_Commission__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Value Without Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>