force-app/main/default/objects/Opportunity/fields/sugati__O_Margin_Warning__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Margin_Warning__c</fullName>
    <formula>(sugati__O_Live_Margin__c*100) &lt; sugati__O_Suggested_Margin__r.sugati__M_Margin__c</formula>
    <label>Margin Warning</label>
    <type>Checkbox</type>
</CustomField>