force-app/main/default/objects/Opportunity/fields/sugati__O_Marker_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Marker_Color__c</fullName>
    <label>Marker Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>