force-app/main/default/objects/Opportunity/fields/sugati__O_Marketing_Tour_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Marketing_Tour_Name__c</fullName>
    <description>Used on &apos;Tour Detail&apos; page to show Tour name on the banner image.</description>
    <label>Marketing Tour Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>