force-app/main/default/objects/Opportunity/fields/sugati__O_Minimum_Occupancy2__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Minimum_Occupancy2__c</fullName>
    <label>Minimum Occupancy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>