force-app/main/default/objects/Opportunity/fields/sugati__O_New_Page_for_Inclusions_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_New_Page_for_Inclusions_Exclusions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Page for Inclusions &amp; Exclusions</label>
    <type>Checkbox</type>
</CustomField>