force-app/main/default/objects/Opportunity/fields/sugati__O_Nights__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Nights__c</fullName>
    <label>Nights</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>