force-app/main/default/objects/Opportunity/fields/sugati__O_No_Notification__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_No_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Notification</label>
    <type>Checkbox</type>
</CustomField>