force-app/main/default/objects/Opportunity/fields/sugati__O_No_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_No_of_Nights__c</fullName>
    <formula>sugati__O_Return_Date__c -  sugati__O_Departure_Date__c</formula>
    <label>No of Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>