force-app/main/default/objects/Opportunity/fields/sugati__O_Old_Markup_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Old_Markup_Value__c</fullName>
    <label>Old Markup Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>