force-app/main/default/objects/Opportunity/fields/sugati__O_On_Request_Enabled__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_On_Request_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Request Enabled?</label>
    <type>Checkbox</type>
</CustomField>