force-app/main/default/objects/Opportunity/fields/sugati__O_Original_COSTS__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Original_COSTS__c</fullName>
    <description>A combination of COSTS and Charges fields</description>
    <inlineHelpText>A combination of COSTS and Charges fields</inlineHelpText>
    <label>Original COSTS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>