force-app/main/default/objects/Opportunity/fields/sugati__O_Original_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Original_Margin__c</fullName>
    <formula>( sugati__O_Original_Sales_Price__c -  sugati__O_Original_COSTS__c ) / sugati__O_Original_Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>