force-app/main/default/objects/Opportunity/fields/sugati__O_Other_Invoice_Comments__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Other_Invoice_Comments__c</fullName>
    <label>Other Invoice Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>