force-app/main/default/objects/Opportunity/fields/sugati__O_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Outstanding__c</fullName>
    <formula>IF(
    OR(TEXT(StageName) ==  $Setup.sugati__Sugati_Stage_Name_Mapping__c.sugati__Waiting_List__c, TEXT(StageName) ==  $Setup.sugati__Sugati_Stage_Name_Mapping__c.sugati__On_Request__c),
    0,
    Amount - sugati__O_Total_Payment_Without_CC__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>