force-app/main/default/objects/Opportunity/fields/sugati__O_Over_All_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Over_All_Discount__c</fullName>
    <label>Over All Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>