force-app/main/default/objects/Opportunity/fields/sugati__O_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Owner_Name__c</fullName>
    <label>Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>