force-app/main/default/objects/Opportunity/fields/sugati__O_Parent_Source__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Parent_Source__c</fullName>
    <formula>Campaign.Parent.Name</formula>
    <label>Parent Source</label>
    <type>Text</type>
</CustomField>