force-app/main/default/objects/Opportunity/fields/sugati__O_Pax__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Pax__c</fullName>
    <formula>IF(OR(TEXT(StageName) == &apos;Template&apos;, TEXT(StageName) == &apos;Tour&apos;), 0, IF(sugati__O_Is_Group_Booking__c,IF(sugati__Adult_Old__c &gt; 0, sugati__Adult_Old__c, sugati__O_Adult__c) + IF( sugati__O_Child_Old__c  &gt; 0, sugati__O_Child_Old__c, sugati__O_Children__c) + IF(  sugati__O_Infant_Old__c   &gt; 0, sugati__O_Infant_Old__c, sugati__O_Infant__c)-3,IF(sugati__Adult_Old__c &gt; 0, sugati__Adult_Old__c, sugati__O_Adult__c) + IF( sugati__O_Child_Old__c  &gt; 0, sugati__O_Child_Old__c, sugati__O_Children__c) + IF(  sugati__O_Infant_Old__c   &gt; 0, sugati__O_Infant_Old__c, sugati__O_Infant__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>