force-app/main/default/objects/Opportunity/fields/sugati__O_Payment_Rule__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Payment_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Rule</label>
    <referenceTo>sugati__Rule__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>