force-app/main/default/objects/Opportunity/fields/sugati__O_Pipeline_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Pipeline_Notes__c</fullName>
    <label>Pipeline Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>