force-app/main/default/objects/Opportunity/fields/sugati__O_Policy_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Policy_No__c</fullName>
    <label>Policy No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>