force-app/main/default/objects/Opportunity/fields/sugati__O_Pre_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Pre_Booking__c</fullName>
    <formula>IF( YEAR(  sugati__O_Departure_Date__c  ) &gt; YEAR( sugati__O_Booking_Date__c ), &quot;YES&quot;, &quot;NO&quot;)</formula>
    <label>Pre-Booking</label>
    <type>Text</type>
</CustomField>