force-app/main/default/objects/Opportunity/fields/sugati__O_Previous_Total_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Previous_Total_Selling_Price__c</fullName>
    <label>Previous Total Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>