force-app/main/default/objects/Opportunity/fields/sugati__O_Product_Class__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Product_Class__c</fullName>
    <label>Product Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Mid-range</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>