force-app/main/default/objects/Opportunity/fields/sugati__O_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Product_Type__c</fullName>
    <description>Set the API name of the options to the same as the field set api name to display for this product type</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>O_Adventure_Trips</fullName>
            </value>
            <value>
                <fullName>O_Mini_Experiences</fullName>
            </value>
            <value>
                <fullName>O_Tour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>