force-app/main/default/objects/Opportunity/fields/sugati__O_Questionnaire_Completed__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Questionnaire_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Questionnaire Completed</label>
    <type>Checkbox</type>
</CustomField>