force-app/main/default/objects/Opportunity/fields/sugati__O_Quotation_Default_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Quotation_Default_Text__c</fullName>
    <label>Quotation Default Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>