force-app/main/default/objects/Opportunity/fields/sugati__O_Quotation_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Quotation_Type__c</fullName>
    <label>Quotation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Multiple Client Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>