force-app/main/default/objects/Opportunity/fields/sugati__O_Quote_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Quote_No__c</fullName>
    <externalId>true</externalId>
    <label>Dhruv Quote No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>