force-app/main/default/objects/Opportunity/fields/sugati__O_Quote_to_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Quote_to_Booking__c</fullName>
    <formula>sugati__O_Booking_Date__c -  sugati__O_Quote_Date__c</formula>
    <label>Quote to Booking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>