force-app/main/default/objects/Opportunity/fields/sugati__O_Quote_to_Departure__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Quote_to_Departure__c</fullName>
    <formula>sugati__O_Departure_Date__c -  sugati__O_Quote_Date__c</formula>
    <label>Quote to Departure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>