force-app/main/default/objects/Opportunity/fields/sugati__O_Reason__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Reason__c</fullName>
    <description>Reason for not-booking where enquiry or quote has gone cold OR
Reason for booking cancellation where relevant.</description>
    <inlineHelpText>Reason for not-booking where enquiry or quote has gone cold OR
Reason for booking cancellation where relevant.</inlineHelpText>
    <label>Reason for Colding</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No response from the client after initial contact</fullName>
            </value>
            <value>
                <fullName>No response from the client after having been responsive initially</fullName>
            </value>
            <value>
                <fullName>Client not travelling at all</fullName>
            </value>
            <value>
                <fullName>Client not travelling as too expensive</fullName>
            </value>
            <value>
                <fullName>Client booked direct</fullName>
            </value>
            <value>
                <fullName>Client booked through a competitor based on price</fullName>
            </value>
            <value>
                <fullName>Client booked through a competitor based on knowledge</fullName>
            </value>
            <value>
                <fullName>Client booked through a competitor based on turnaround speed</fullName>
            </value>
            <value>
                <fullName>Client booked through a competitor based on product preference</fullName>
            </value>
            <value>
                <fullName>Enquiry politely declined by consultant due to unrealistic budget</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>