force-app/main/default/objects/Opportunity/fields/sugati__O_RecordType__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_RecordType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sugati__Record_Type__c.sugati__RT_SObject_Type__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sugati__Record_Type__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>