force-app/main/default/objects/Opportunity/fields/sugati__O_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Reference_Number__c</fullName>
    <label>Reference Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>