force-app/main/default/objects/Opportunity/fields/sugati__O_Reminder__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Reminder Requested</label>
    <type>Checkbox</type>
</CustomField>