force-app/main/default/objects/Opportunity/fields/sugati__O_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Requested_Amount__c</fullName>
    <label>Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>