force-app/main/default/objects/Opportunity/fields/sugati__O_Return_Month__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Return_Month__c</fullName>
    <formula>IF(MONTH(sugati__O_Return_Date__c) = 1, &quot;January&quot;, 
IF(MONTH(sugati__O_Return_Date__c) = 2, &quot;February&quot;, 
IF(MONTH(sugati__O_Return_Date__c) = 3, &quot;March&quot;, 
IF(MONTH(sugati__O_Return_Date__c) = 4, &quot;April&quot;, 
IF(MONTH(sugati__O_Return_Date__c) = 5, &quot;May&quot;, 
IF(MONTH(sugati__O_Return_Date__c) = 6, &quot;June&quot;, 
IF(MONTH(sugati__O_Return_Date__c) = 7, &quot;July&quot;, 
IF(MONTH(sugati__O_Return_Date__c) = 8, &quot;August&quot;, 
IF(MONTH(sugati__O_Return_Date__c) = 9, &quot;September&quot;, 
IF(MONTH(sugati__O_Return_Date__c) = 10, &quot;October&quot;, 
IF(MONTH(sugati__O_Return_Date__c) = 11, &quot;November&quot;, 
&quot;December&quot;)))))))))))</formula>
    <label>Return Month</label>
    <type>Text</type>
</CustomField>