force-app/main/default/objects/Opportunity/fields/sugati__O_Return_Year__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Return_Year__c</fullName>
    <formula>YEAR(sugati__O_Return_Date__c )</formula>
    <label>Return Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>