force-app/main/default/objects/Opportunity/fields/sugati__O_Room_Allocation__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Room_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room Allocation</label>
    <referenceTo>sugati__Room_Allocation__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>