force-app/main/default/objects/Opportunity/fields/sugati__O_Room_For_Sharing_Male__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Room_For_Sharing_Male__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Room For Sharing Male</label>
    <type>Checkbox</type>
</CustomField>