force-app/main/default/objects/Opportunity/fields/sugati__O_Room_For_Single_Female__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Room_For_Single_Female__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Room For Single Female</label>
    <type>Checkbox</type>
</CustomField>