force-app/main/default/objects/Opportunity/fields/sugati__O_Room_Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Room_Setup_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Room Setup Complete</label>
    <type>Checkbox</type>
</CustomField>