force-app/main/default/objects/Opportunity/fields/sugati__O_Sales_Commission1__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Sales_Commission1__c</fullName>
    <label>Sales Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>