force-app/main/default/objects/Opportunity/fields/sugati__O_Sales_CommissionP__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Sales_CommissionP__c</fullName>
    <label>Sales Commission %</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>