force-app/main/default/objects/Opportunity/fields/sugati__O_School_holidays__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_School_holidays__c</fullName>
    <label>School holidays</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>School Easter holidays</fullName>
            </value>
            <value>
                <fullName>School Summer holidays</fullName>
            </value>
            <value>
                <fullName>School Christmas holidays</fullName>
            </value>
            <value>
                <fullName>Feb Half term</fullName>
            </value>
            <value>
                <fullName>May Half term</fullName>
            </value>
            <value>
                <fullName>Oct Half term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>