force-app/main/default/objects/Opportunity/fields/sugati__O_Seasons__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Seasons__c</fullName>
    <label>Seasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Christmas/New Year</fullName>
            </value>
            <value>
                <fullName>Easter</fullName>
            </value>
            <value>
                <fullName>Winter (non Christmas/Easter)</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Autumn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>