force-app/main/default/objects/Opportunity/fields/sugati__O_Selling_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Selling_Exchange_Rate__c</fullName>
    <formula>IF(ISBLANK(sugati__O_Exchange_Rate__c), 1, sugati__O_Exchange_Rate__r.sugati__ER_Exchange_Rate__c)</formula>
    <inlineHelpText>Exchange Rate against Tour Currency</inlineHelpText>
    <label>Selling Exchange Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>