force-app/main/default/objects/Opportunity/fields/sugati__O_Selling_Price_in_GBP__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Selling_Price_in_GBP__c</fullName>
    <formula>Amount / sugati__O_Selling_Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selling Price in Tour Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>