force-app/main/default/objects/Opportunity/fields/sugati__O_Service_Team__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Service_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Team</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>