force-app/main/default/objects/Opportunity/fields/sugati__O_Sharing_Females_On_Request__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Sharing_Females_On_Request__c</fullName>
    <label>Sharing Females On Request</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>