force-app/main/default/objects/Opportunity/fields/sugati__O_Sharing_Females_On_Waiting_List__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Sharing_Females_On_Waiting_List__c</fullName>
    <label>Sharing Females On Waiting List</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>