force-app/main/default/objects/Opportunity/fields/sugati__O_Ship__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Ship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Opportunities (Ship)</relationshipLabel>
    <relationshipName>OpportunityShips</relationshipName>
    <type>Lookup</type>
</CustomField>