force-app/main/default/objects/Opportunity/fields/sugati__O_Show_Option_text_for_quotation__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Show_Option_text_for_quotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Option text for quotation</label>
    <type>Checkbox</type>
</CustomField>